# lifeblood

./: .buildinfo  .gitignore  README.md  TODO.md  api.html  build_pyinstaller.sh  concepts.html  entry.py  expressions.html  farman.drawio  genindex.html  index.html  installation.html  invocation_comm_feature.html  lifeblood.spec  logging.html  network_config.html  nodes.html  objects.inv  overview.html  publish_all.sh  publish_all_release.sh  publish_all_testing.sh  py-modindex.html  requirements.txt  requirements_tests.txt  scheduler.html  search.html  searchindex.js  setup.cfg  taskflow.spec  tutorials.html  usage.html  viewer.html  worker.html  worker_api.html
.github/: dependabot.yml
.github/workflows/: auto-release-tools.yml  build-tools.yml  lint.yml  pypi-pub.yml  python-app.yml  release-notify.yml  sphinx.yml  tests-win.yml  tests.yml
_sources/: api.rst.txt  expressions.rst.txt  index.rst.txt  installation.rst.txt  nodes.rst.txt  overview.rst.txt  tutorials.rst.txt  worker.rst.txt
_sources/viewer/: viewer.rst.txt
components/: index.html  logging.html
components/scheduler/: database.html  index.html  scheduler.html  scheduler_api.html  scheduler_configs.html
components/viewer/: config.html  index.html  viewer.html  viewer_api.html
components/worker/: environment_resolver.html  index.html  worker.html  worker_api.html
dcc_plugins/: zipit.sh
dcc_plugins_workspace/: build.sh  build_blender.sh  build_houdini.sh
dcc_plugins_workspace/blender/: README.md
dcc_plugins_workspace/houdini/: README.md  build.sh
docs/source/: api.rst  concepts.rst  conf.py  howtouse.rst  index.rst  installation.rst  invocation_comm_feature.rst  logging.rst  network_config.rst  nodes.rst  overview.rst  requirements.txt  scheduler.rst  tutorials.rst  usage.rst  viewer.rst  viewer_api.rst  worker.rst  worker_api.rst
install/: README.md  install.ps1  install.sh
matrixclient/: __main__.py  compile.sh  install_matrix_commander.py
matrixclient/matrix_client/: api.py
nodes/core/: attribute_splitter.html  delete_attrib.html  environment_resolver_arguments_setter.html  killer.html  mod_attrib.html  null.html  parent_children_waiter.html  python.html  rename_attrib.html  set_attrib.html  spawn_children.html  split_waiter.html  switch.html  wait_for_task_value.html  wedge.html
nodes/stock/: matrixnotifier.html
pkg_lifeblood/: MANIFEST.in  README.md  build_pypi.sh  setup.cfg  upload_pypi.sh
pkg_lifeblood/src/: lifeblood
pkg_lifeblood_viewer/: README.md  build_pypi.sh  setup.cfg  upload_pypi.sh
pkg_lifeblood_viewer/src/: lifeblood_viewer
rcc/: build.sh  dark.qss  light.qss  theme.rcc
scheduler/: database.html  scheduler.html  scheduler_api.html  scheduler_configs.html
src/lifeblood/: aiosqlite_overlay.py  base.py  basenode.py  basenode_serialization.py  basenode_serializer_v1.py  basenode_serializer_v2.py  broadcasting.py  buffer_serializable.py  buffered_connection.py  component_base.py  config.py  data_manager.py  db_misc.py  defaults.py  enums.py  environment_resolver.py  exceptions.py  expiring_collections.py  expiring_dict.py  filelock.py  invocationjob.py  launch.py  local_notifier.py  logging.py  main_scheduler.py  main_worker.py  main_workerpool.py  maintenance.py  matrix_helper.py  misc.py  names.py  net_classes.py  net_messages.py  nethelpers.py  node_dataprovider_base.py  node_type_metadata.py  node_visualization_classes.py  nodegraph_holder_base.py  nodethings.py  os_based_cheats.py  (+28 more)
src/lifeblood_client/: __init__.py  environment_resolver.py  submitting.py
src/lifeblood_runtime/: query.py
src/lifeblood_testing_common/: common.py  integration_common.py  nodes_common.py
src/lifeblood_viewer/: __init__.py  breeze_resources.py  connection_worker.py  create_task_dialog.py  db_misc.py  editor_scene_integration.py  flashy_label.py  graphics_items.py  graphics_scene.py  imgui_opengl_hotfix.py  launch.py  lifeblood_viewer.py  long_op.py  menu_entry_base.py  nodeeditor.py  save_node_settings_dialog.py  scene_ops.py  ui_elements_base.py  ui_scene_elements.py  ui_snippets.py  undo_stack.py  utils.py  worker_list.py
src/taskflow/: basenode.py  broadcasting.py  config.py  db_misc.py  enums.py  environment_resolver.py  environment_wrapper.py  invocationjob.py  launch.py  logging.py  misc.py  net_classes.py  nethelpers.py  node_visualization_classes.py  nodethings.py  paths.py  pluginloader.py  processingcontext.py  rwlock.py  scheduler.py  scheduler_task_protocol.py  scheduler_ui_protocol.py  scheduler_worker_pool.py  shared_lazy_sqlite_connection.py  taskspawn.py  uidata.py  worker.py  worker_pool.py  worker_pool_protocol.py  worker_task_protocol.py
src/viewer/: connection_worker.py  create_task_dialog.py  launch.py
taskflow/: __init__.py  basenode.py  broadcasting.py  config.py  db_misc.py  enums.py  environment_wrapper.py  exceptions.py  invocationjob.py  logging.py  nethelpers.py  node_viewer.py  nodethings.py  paths.py  pluginloader.py  scheduler.py  scheduler_task_protocol.py  scheduler_ui_protocol.py  taskdata.py  taskspawn.py  uidata.py  worker.py  worker_task_protocol.py
taskflow/core_nodes/: set_attrib.py  slice_waiter.py  test.py
taskflow/stock_nodes/: framerange_splitter.py  hip_driver_renderer.py  mantra.py  (+1 more)
tests/: test_aiosqlite_overlay.py  test_bad_node_deserialization.py  test_basenode.py  test_buffered_connection.py  test_config.py  test_envisonment_resolver.py  test_error_invocations.py  test_expiring_dict.py  test_instafinish_tasks.py  test_invocation_messages_integration.py  test_messageprocessor_integration.py  test_net_messages.py  test_nethelpers.py  test_nodeui.py  test_process_utils.py  test_scheduler.py  test_scheduler_event_log.py  test_scheduler_worker_comm.py  test_serializationv2.py  test_sharedlazysqlitecon.py  test_snippets.py  test_spawn_tasks_race.py  test_task_blocking.py  test_text.py  test_ui_events.py  test_ui_protocol_data.py  test_ui_state_accessor_integration.py  test_worker.py  test_worker_pool.py  test_worker_restart_double_invocation_edge_case.py
tools/: idx_editor.py
viewer/: viewer.html  viewer_api.html
(+352 files in other folders)
