[metadata]
# replace with your username:
name = example-pkg-xxx-taskflow
version = 0.0.4
author = XAPKOHHEH
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiofiles==0.6.0
    aiohttp==3.7.4.post0
    aiosqlite==0.17.0
    glfw==2.1.0
    imgui==1.3.0
    PyOpenGL==3.1.5
    PySide2==5.15.2
    toml==0.10.2

[options.package_data]
taskflow = core_nodes/*, stock_nodes/*

[options.packages.find]
where = src