[metadata]

name = lifeblood
version = 0.1.6
author = XAPKOHHEH
description = LIFEBLOOD !!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pedohorse/lifeblood
project_urls =
    Bug Tracker = https://github.com/pedohorse/lifeblood/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = ../src
packages = find:
python_requires = >=3.8, <3.11
install_requires =
    aiofiles~=0.8
    aiosqlite~=0.17
    aiorwlock~=1.3
    lz4~=4.0
    psutil~=5.8
    pywin32==304; platform_system=="Windows"
    semantic-version~=2.10
    toml~=0.10
    watchdog~=2.1

[options.packages.find]
where = ../src
include = lifeblood*
exclude = lifeblood_viewer*

[options.package_data]
lifeblood = core_nodes/**, stock_nodes/**

[options.exclude_package_data]
lifeblood = core_nodes/**/__pycache__/*, stock_nodes/**/__pycache__/*, **/*.pyc

[options.entry_points]
console_scripts =
    lifeblood = lifeblood.launch:console_entry_point
    lifeblood_matrix_helper = lifeblood.matrix_helper:main
