[metadata]
# replace with your username:
name = example-pkg-lifeblood-viewer
version = 0.0.3
author = XAPKOHHEH
author_email = xapkohheh@gmail.com
description = view the LIFEBLOOD !!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/example-pkg-lifeblood-viewer
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = ../src
packages = lifeblood_viewer
python_requires = >=3.6
install_requires =
    glfw~=2.1.0
    imgui~=1.3.0
    PyOpenGL~=3.1.5
    PySide2~=5.15.2
    lz4~=3.1.3
    lifeblood~=0.0.0
    grandalf~=0.7
    numpy~=1.21.2

[options.entry_points]
console_scripts =
    hello-world = lifeblood_viewer:launch
