[metadata]
# replace with your username:
name = example-pkg-lifeblood-viewer
version = 0.0.11
author = XAPKOHHEH
author_email = lifeblood+xapkohheh@gmail.com
description = view the LIFEBLOOD !!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pedohorse/lifeblood
project_urls =
    Bug Tracker = https://github.com/pedohorse/lifeblood/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = ../src
packages = lifeblood_viewer
python_requires = >=3.6, <3.10
install_requires =
    glfw~=2.5.0
    imgui~=1.4.0
    PyOpenGL~=3.1.6
    PySide2~=5.15.2
    lz4~=4.0.1
    lifeblood~=0.0.0
    grandalf~=0.7
    numpy~=1.21.2

[options.package_data]
lifeblood_viewer = icons/*

[options.entry_points]
console_scripts =
    lifeblood_viewer = lifeblood_viewer.launch:console_entry_point
