[metadata]

name = lifeblood-viewer
version = 0.1.6
author = XAPKOHHEH
description = view the LIFEBLOOD !!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pedohorse/lifeblood
project_urls =
    Bug Tracker = https://github.com/pedohorse/lifeblood/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = ../src
packages = find:
python_requires = >=3.8, <3.11
install_requires =
    imgui~=1.4
    glfw~=2.5
    PyOpenGL~=3.1
    PySide2~=5.15
    lz4~=4.0
    lifeblood~=0.1
    grandalf~=0.7
    numpy~=1.21

[options.packages.find]
where = ../src
include = lifeblood_viewer*

[options.package_data]
lifeblood_viewer = icons/*

[options.entry_points]
console_scripts =
    lifeblood_viewer = lifeblood_viewer.launch:console_entry_point
